2022-11-29T08:19:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3572238129 # 657
* notice: last 14d: unq all: 2 24
* notice: prev accum: outdated-unq outdated-all / unq all: 253 458 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 253 458 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-15]

2022-11-29T01:13:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3570080561 # 656
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 251 454 / 266 481
* notice: next accum: outdated-unq outdated-all / unq all: 253 458 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-14] / []

2022-11-28T16:16:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3566619561 # 655
* notice: last 14d: unq all: 3 27
* notice: prev accum: outdated-unq outdated-all / unq all: 251 454 / 265 481
* notice: next accum: outdated-unq outdated-all / unq all: 251 454 / 266 481
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-14 2022-11-28]

2022-11-28T08:18:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3562941905 # 654
* notice: last 14d: unq all: 2 27
* notice: prev accum: outdated-unq outdated-all / unq all: 251 454 / 265 482
* notice: next accum: outdated-unq outdated-all / unq all: 251 454 / 265 481
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +4 -0 -1 / 2 3
* notice: removed / changed dates: [] / [2022-11-14]

2022-11-27T16:18:43Z: