@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-29T08:19:11Z",
-  "count_outdated" : 458,
-  "uniques_outdated" : 253,
-  "count" : 482,
+  "timestamp" : "2022-11-29T16:20:28Z",
+  "count_outdated" : 460,
+  "uniques_outdated" : 254,
+  "count" : 483,
   "uniques" : 266,
   "clones" : [
-    {
-      "timestamp": "2022-11-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-16T00:00:00Z",
       "count": 2,
