@@ -1,3 +1,11 @@
+2022-11-29T16:20:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3575973914 # 658
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 253 458 / 266 482
+* notice: next accum: outdated-unq outdated-all / unq all: 254 460 / 266 483
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-15] / []
+
 2022-11-29T08:19:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3572238129 # 657
 * notice: last 14d: unq all: 2 24
